--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,11 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
+                always_remember_me: true
             anonymous: true
             lazy: true
             provider: app_user_provider
@@ -35,5 +40,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: '^/admin', roles: ROLE_ADMIN }
+
+    role_hierarchy:
+        ROLE_RH:       ROLE_USER
+        ROLE_ADMIN: [ROLE_RH, ROLE_USER, ROLE_ALLOWED_TO_SWITCH]
